--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "mocha": "^8.2.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --require @babel/register"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/register": "^7.12.1",
     "lodash": "^4.17.20"
   }
 }
